- Added Enemy Death Notifications - Notifes you when a enemy dies
- Added Notification to Kill Enemy - Notifies you when a enemy is killed or can't be killed
- Added Notification to Stun Enemy -  Notifies you when a enemy is stunned or can't be stunned
- Added Bush Wolf Enemy Insta Kill - Added Bush Wolf Enemy to Insta Kill
- Added Cave Dweller Insta Kill - Added Cave Dweller to Insta Kill
- Fixed Enemy Controller - Enemy control gets disabled when the enemy dies or gets destroyed
- Added Close Gate - Closes Experimentation gate at the front entrance
- Fixed Teleport Enemy To Player - It was using EnemyAI[] instead of EnemyAI
- Fixed Chams Error - Fixed a chams error with turrets when you left mid game
- Fixed God Mode Error - Added null checks to all god mode patches
- Fixed Toggle Terminal Sound Error - Fixed error when you leave with Toggle Terminal Sound hack on 
- Fixed Open All Doors - Forgot to add it to executors :C and improved its code!
- Fixed Close All Doors - Forgot to add it to executors :C and improved its code!
- Changed Teleport All Enemies - Changed the method it used!
- Changed Unload - It attempts to remove all enabled hacks and make everything normal

v1.4.4 
- Added PJ Plushie Spammer - Spams PJ Plushies at a variable speed
- Added Click Teleport - Teleport to where you click
- Added Peer 2 Peer Communication - Adds [LethalMenu {version}] before their names in players tab (1.4.4+) 
- Added New Enemies To Cham Toggles 
- Added Grab Objects Before Game - You can pick up items
- Added Toggle All For Displays - Added a toggle to enable and disable all display options
- Added Toggle Terminal Sound - Spam the terminal sound
- Added FPS Counter - Displays your FPS
- Added Toggle Menu Tip - Adds a Toggle Menu: (Menu Key) to control tips
- Added Vehicle Godmode - Cruiser doesn't take damage
- Added Color Customization to info display
- Added Hack Highlight - Hacks are highlighted